bk_ida/gccida/g0/cselib_invalidate_rtx
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_rtx/src/cselib.c:1626:49: error: use of undeclared identifier 'machine_mode'
cselib_invalidate_regno( dest->fld[0].rtuint, ( machine_mode)*( ( unsigned __int8 *)dest + 2)); 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_rtx/src/cselib.c:1632:28: error: use of undeclared identifier 'machine_mode'
if ( push_operand( dest, ( machine_mode)*( ( unsigned __int8 *)dest + 2)) ) 
                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_rtx/src/obj/cselib.o] Error 1
